Bug 127552 - Moving the mouse pointer over a button in a toolbar that has keyboard focus on a button causes loss of keyboard focus
Summary: Moving the mouse pointer over a button in a toolbar that has keyboard focus o...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0 target:6.4.0.2
Keywords:
: 119716 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-09-15 00:43 UTC by Jim Raykowski
Modified: 2021-09-10 08:53 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
patch demo (484.27 KB, video/x-matroska)
2019-10-26 09:15 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2019-09-15 00:43:03 UTC
Steps to repro using Writer

1) Menu > View > User Interface > Standard Toolbar

2) Press F6 twice - keyboard focus moves to Standard toolbar New button

3) Move mouse pointer over buttons in the Formatting toolbar
(toolbar below Standard toolbar) - buttons do not highlighted

4) Move mouse pointer over any button in the Standard toolbar

Result: button is highlighted and keyboard focus is lost

Expected result: keyboard focus not lost
 
I purpose following behavior of toolbars without keyboard focus and not highlighting buttons on mouse over if keyboard focus is on a toolbar button.
Comment 1 Xisco Faulí 2019-10-14 15:29:38 UTC
Reproduced in

Version: 6.4.0.0.alpha0+
Build ID: 9b5dad13b56bdde7c40970351af3da3a2c3c9350
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

and

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 2 Jim Raykowski 2019-10-23 03:16:33 UTC
Here is a patch that doesn't mouse over highlight when a toolbar item already has focus:

https://gerrit.libreoffice.org/#/c/81356/
Comment 3 Jim Raykowski 2019-10-26 09:15:25 UTC
Created attachment 155321 [details]
patch demo

I have attached a demonstration video of the change of behavior this patch provides when the mouse pointer is move over a toolbar item in which an item in the same toolbar has focus. Notice when the mouse pointer leaves the toolbar the item the mouse was over when leaving remains highlighted. This is now the focused item and keyboard navigation will continue from here. When the focus is in an edit item mouse over of other items in the toolbar does not change the focus. It  works this way for all toolbox controls including those in the sidebar. When focus is not in any toolbox, item highlighting occurs for mouse over on any toolbox. The difference with out the patch applied is that when a toolbox has item focus it is lost when the mouse leaves the toolbox leaving keyboard navigation in an unknown state which requires a couple of navigation key presses to get it to return to the first item in the toolbox.
Comment 4 Commit Notification 2019-11-20 22:06:55 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/800b6f095f95ccfb8a7ba9755292332bf97f97ad

tdf#127552 Make toolbox highlighting behave as intended

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Jim Raykowski 2019-11-24 10:17:37 UTC
*** Bug 119716 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2019-12-20 03:29:28 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/a42bc2e56f935bb3caa22bd3f6ff27720939cb29

tdf#127552 Make toolbox highlighting behave as intended

It will be available in 6.4.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.