tdf#127552 Don't mouse over highlight when toolbar item has focus

Change-Id: Ia18d35c4255ed0940bce5f0c6d9448ed2c85c6fe